--- a/angular-frontend/package.json
+++ b/angular-frontend/package.json
@@ -26,8 +26,10 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "ajv": "8.11.0",
+    "and": "^0.0.3",
     "arrive": "2.4.1",
-    "bootstrap": "4.6.1",
+    "axios": "^1.6.7",
+    "bootstrap": "^4.6.1",
     "bootstrap-material-design": "4.1.3",
     "bootstrap-notify": "3.1.3",
     "chartist": "0.11.4",
@@ -41,6 +43,7 @@
     "perfect-scrollbar": "1.5.5",
     "popper.js": "1.16.1",
     "rxjs": "~7.8.0",
+    "sweetalert2": "^11.10.4",
     "tslib": "^2.3.0",
     "web-animations-js": "2.3.2",
     "zone.js": "~0.13.0"
@@ -50,14 +53,13 @@
     "@angular/cli": "^16.2.5",
     "@angular/compiler-cli": "^16.2.0",
     "@angular/language-service": "16.2.0",
-    "@types/jasmine": "~4.3.0",
-    "@types/jasminewd2": "~2.0.10",
-    "@types/node": "^17.0.21",
     "@types/bootstrap": "4.5.0",
     "@types/chartist": "0.11.1",
     "@types/google.maps": "3.47.4",
+    "@types/jasmine": "~4.3.0",
+    "@types/jasminewd2": "~2.0.10",
     "@types/jquery": "3.5.6",
-    "sass": "1.32.13",
+    "@types/node": "^17.0.21",
     "codelyzer": "6.0.2",
     "jasmine-core": "~4.6.0",
     "jasmine-spec-reporter": "~7.0.0",
@@ -68,6 +70,7 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "protractor": "7.0.0",
+    "sass": "1.32.13",
     "ts-node": "~10.9.1",
     "typescript": "~5.1.3"
   }
