--- a/angular-frontend/package.json
+++ b/angular-frontend/package.json
@@ -29,7 +29,7 @@
     "and": "^0.0.3",
     "arrive": "2.4.1",
     "axios": "^1.6.7",
-    "bootstrap": "^4.6.1",
+    "bootstrap": "^4.6.2",
     "bootstrap-material-design": "4.1.3",
     "bootstrap-notify": "3.1.3",
     "chartist": "0.11.4",
@@ -43,6 +43,7 @@
     "perfect-scrollbar": "1.5.5",
     "popper.js": "1.16.1",
     "rxjs": "~7.8.0",
+    "sweetalert": "^2.1.2",
     "sweetalert2": "^11.10.4",
     "tslib": "^2.3.0",
     "web-animations-js": "2.3.2",
