--- a/angular-frontend/package.json
+++ b/angular-frontend/package.json
@@ -40,6 +40,7 @@
     "hammerjs": "2.0.8",
     "jquery": "3.6.0",
     "moment": "2.29.1",
+    "ngx-bootstrap": "^11.0.2",
     "perfect-scrollbar": "1.5.5",
     "popper.js": "1.16.1",
     "rxjs": "~7.8.0",
