adding feedback scenario (front/back) with auto sending a link via email when the formation is on its last day

--- a/springboot-backend/pom.xml
+++ b/springboot-backend/pom.xml
@@ -66,11 +66,15 @@
             <version>0.11.5</version> 
         </dependency> 
         <dependency>
-    <groupId>com.fasterxml.jackson.core</groupId>
-    <artifactId>jackson-databind</artifactId>
-     <!-- Use the latest version -->
-</dependency>
+		    <groupId>com.fasterxml.jackson.core</groupId>
+		    <artifactId>jackson-databind</artifactId>
+		     <!-- Use the latest version -->
+		</dependency>
 
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-mail</artifactId>
+		</dependency>
     </dependencies> 
 
 	<build>
