--- a/angular-frontend/package.json
+++ b/angular-frontend/package.json
@@ -25,6 +25,7 @@
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "ajv": "8.11.0",
     "and": "^0.0.3",
     "arrive": "2.4.1",
