--- a/springboot-backend/src/main/resources/application.properties
+++ b/springboot-backend/src/main/resources/application.properties
@@ -6,3 +6,11 @@ spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
 spring.main.allow-circular-references=true
 #spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+# EmailSender settings
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=acc2foruse@gmail.com
+spring.mail.password=xdmn ysxt xfnu wewy
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
